--- a/GUIWin32PrepTool/GUIWin32PrepTool.csproj
+++ b/GUIWin32PrepTool/GUIWin32PrepTool.csproj
@@ -51,7 +51,8 @@
     <StartupObject />
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
